@@ -446,7 +446,7 @@ apr_status_t h2_stream_recv_frame(h2_stream *stream, int ftype, int flags, size_
                 ap_assert(stream->request == NULL);
                 if (stream->rtmp == NULL) {
                     /* This can only happen, if the stream has received no header
-                     * name/value pairs at all. The lastest nghttp2 version have become
+                     * name/value pairs at all. The latest nghttp2 version have become
                      * pretty good at detecting this early. In any case, we have
                      * to abort the connection here, since this is clearly a protocol error */
                     return APR_EINVAL;
@@ -790,7 +790,7 @@ apr_status_t h2_stream_end_headers(h2_stream *stream, int eos, size_t raw_bytes)
         if (ctx.failed_key) {
             if (!h2_stream_is_ready(stream)) {
                 ap_log_cerror(APLOG_MARK, APLOG_INFO, 0, stream->session->c,
-                              H2_STRM_LOG(APLOGNO(), stream,"Request header exceeds "
+                              H2_STRM_LOG(APLOGNO(10230), stream,"Request header exceeds "
                                           "LimitRequestFieldSize: %.*s"),
                               (int)H2MIN(strlen(ctx.failed_key), 80), ctx.failed_key);
             }
